--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,6 +18,7 @@ requirements:
   host:
     - python >=3.8
     - pip
+    - setuptools
   run:
     - python >=3.8
     - plotly
@@ -27,8 +28,8 @@ requirements:
     - dash-core-components
     - dash-html-components
     - dash-table
-    - channels >=2.0
-    - django >=3.2,<5.0.0
+    - channels >=4.0
+    - django >=4.0.0
     - flask >=1.0.2
     - werkzeug
 
