--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -26,8 +26,8 @@ requirements:
   run:
     - python >=${{ python_min }},<4.0
     - plotly
-    - dash >=2.0,<3.0
-    - dpd_components
+    - dash >=2.0
+    - dpd_components >=0.2.0
     - dash-bootstrap-components <2.0.0
     - channels >=4.0
     - django >=4.0.0
