--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -28,7 +28,7 @@ requirements:
     - plotly
     - dash >=2.0
     - dpd_components >=0.2.0
-    - dash-bootstrap-components <2.0.0
+    - dash-bootstrap-components
     - channels >=4.0
     - django >=4.0.0
     - flask >=1.0.2
